--- a/src/staldates/ui/resources/AldatesX.qss
+++ b/src/staldates/ui/resources/AldatesX.qss
@@ -14,6 +14,7 @@ OutputsGrid {
 InputButton, OutputButton, OptionButton, ExpandingButton {
   background-color: #1693A5;
   color: white;
+  border-radius: 5px;
 }
 
 ExpandingButton:pressed, ExpandingButton:checked {
