--- a/src/staldates/ui/resources/AldatesX.qss
+++ b/src/staldates/ui/resources/AldatesX.qss
@@ -11,7 +11,7 @@ OutputsGrid {
   background-color: #00527E;
 }
 
-InputButton, OutputButton, OptionButton, ExpandingButton, QComboBox, QAbstractItemView {
+InputButton, OutputButton, OptionButton, ExpandingButton, QComboBox, QListView {
   background-color: #1693A5;
   color: white;
   border-radius: 5px;
