Scary red UI for admin functions.

--- a/src/staldates/ui/resources/AldatesX.qss
+++ b/src/staldates/ui/resources/AldatesX.qss
@@ -71,5 +71,16 @@ QComboBox {
 
 QComboBox::drop-down {
   border: 0;
+}
 
+PinProtectedScreen QWidget {
+  background-color: #5F1900;
+}
+
+PinProtectedScreen QAbstractButton {
+  background-color: #A51D16;
+}
+
+PinProtectedScreen QAbstractButton:pressed, PinProtectedScreen QAbstractButton:checked {
+  background-color: #FFFDE4;
 }
