--- a/src/staldates/ui/resources/AldatesX.qss
+++ b/src/staldates/ui/resources/AldatesX.qss
@@ -15,6 +15,7 @@ InputButton, OutputButton, OptionButton, ExpandingButton, QComboBox, QListView {
   background-color: #1693A5;
   color: white;
   border-radius: 5px;
+  border: none;
   selection-background-color: #003E5F;
 }
 
@@ -29,6 +30,14 @@ InputButton:disabled, OutputButton:disabled, OptionButton:disabled, ExpandingBut
 
 OutputButton>QLabel {
   font-size: 12pt;
+}
+
+InputButton[isPreview="true"] {
+  border: 3px solid #50FF50;
+}
+
+InputButton[isLive="true"] {
+  border: 3px solid red;
 }
 
 CameraButton {
