--- a/src/staldates/ui/resources/AldatesX.qss
+++ b/src/staldates/ui/resources/AldatesX.qss
@@ -79,5 +79,27 @@ QComboBox {
 
 QComboBox::drop-down {
   border: 0;
+}
 
+QSpinBox {
+  background-color: #1693A5;
+  color: white;
+}
+
+QSpinBox::down-button {
+  subcontrol-position: left;
+  width: 40px;
+  height: 40px;
+  background-color: #E4E4FF;
+  border-image: url(:icons/go-down);
+  border-radius: 5px;
+}
+
+QSpinBox::up-button {
+  subcontrol-position: right;
+  width: 40px;
+  height: 40px;
+  background-color: #E4E4FF;
+  border-image: url(:icons/go-up);
+  border-radius: 5px;
 }
