Flashy button is flashy.

--- a/src/staldates/ui/resources/AldatesX.qss
+++ b/src/staldates/ui/resources/AldatesX.qss
@@ -58,6 +58,11 @@ QPushButton:flat {
   min-height: 32px;
 }
 
+FlashingInputButton[flashing="true"] {
+  background-color: red;
+  color: white;
+}
+
 Clock {
   padding: 0 10px;
 }
