Highlight when an output is showing something other than main mix.
Refs #22.

--- a/src/staldates/ui/resources/AldatesX.qss
+++ b/src/staldates/ui/resources/AldatesX.qss
@@ -53,6 +53,7 @@ OutputButton:pressed {
 
 OutputButton>#stateDisplay {
   font-size: 12pt;
+  border-radius: 5px;
 }
 
 OutputButton>#stateDisplay[highlight="true"] {
