Hide button text when button is disabled too.

--- a/src/staldates/ui/resources/AldatesX.qss
+++ b/src/staldates/ui/resources/AldatesX.qss
@@ -47,6 +47,10 @@ OutputButton {
   color: #1693A5;
 }
 
+OutputButton:disabled {
+  color: #9FA5A5;
+}
+
 OutputButton:pressed {
   color: #E4E4FF;
 }
