--- a/src/staldates/ui/resources.qrc
+++ b/src/staldates/ui/resources.qrc
@@ -16,6 +16,7 @@
         <file alias="list-add">resources/icons/list-add.svg</file>
         <file alias="list-remove">resources/icons/list-remove.svg</file>
         <file alias="media-optical">resources/icons/media-optical.svg</file>
+        <file alias="media-playback-loop">resources/icons/media-playback-loop.svg</file>
         <file alias="media-playback-pause">resources/icons/media-playback-pause.svg</file>
         <file alias="media-playback-start">resources/icons/media-playback-start.svg</file>
         <file alias="media-playback-stop">resources/icons/media-playback-stop.svg</file>
