Fix double-text issue with output buttons.

--- a/src/staldates/ui/resources/AldatesX.qss
+++ b/src/staldates/ui/resources/AldatesX.qss
@@ -43,21 +43,10 @@ InputButton:disabled, OutputButton:disabled, OptionButton:disabled, ExpandingBut
   background-color: #9FA5A5;
 }
 
-OutputButton {
-  color: #1693A5;
-}
-
-OutputButton:disabled {
-  color: #9FA5A5;
-}
-
-OutputButton:pressed {
-  color: #E4E4FF;
-}
-
 OutputButton>#stateDisplay {
   font-size: 12pt;
   border-radius: 5px;
+  color: white;
 }
 
 OutputButton>#stateDisplay[highlight="true"] {
