--- a/src/staldates/ui/resources.qrc
+++ b/src/staldates/ui/resources.qrc
@@ -31,6 +31,7 @@
         <file alias="process-stop">resources/icons/process-stop.svg</file>
         <file alias="refresh">resources/icons/view-refresh.svg</file>
         <file alias="screens">resources/icons/screens.svg</file>
+        <file alias="stream">resources/icons/stream.svg</file>
         <file alias="spinner">resources/icons/spinner.gif</file>
         <file alias="status-ok">resources/icons/status-ok.svg</file>
         <file alias="status-unknown">resources/icons/status-unknown.svg</file>
